PPRP/src/parser/mnc.java
/* Generated By:JJTree&JavaCC: Do not edit this line. mnc.java */
package parser;

import java.io.*;
import java.io.File;
import java.io.FileInputStream;
import java.io.FileOutputStream;
import utils.*;
import java.io.PrintStream;
import java.util.ArrayList;

public class mnc/* @bgen(jjtree) */ implements mncTreeConstants, mncConstants {/* @bgen(jjtree) */
	protected JJTmncState jjtree = new JJTmncState();
	public static QTList qtTable = new QTList();

	public static String cifaFile = ".//src//testFile//lexical.txt";

	public static String yufaFile = ".//src//testFile//yufa.txt";

	public static String yuyiFile = ".//src//testFile//yuyi.txt";

	public static String errorFile = ".//src//testFile//error.txt";

	public static boolean haveError = false;

	// for错误检查
	public static String S = "";

	public static ArrayList<Record> mylist = new ArrayList<Record>();

	public static RecordList RecordList = new RecordList(mylist);

	public void printQTList() {
		qtTable.printQTTable();
	}

	public static void main(String args[]) {
//    try
//    {
//      File file = new File("E://Java-workspace//PPRP//2.txt");
//      FileInputStream fis = new FileInputStream(file);
//      mnc mm = new mnc(fis);
//      SimpleNode n = mm.Start();
//      n.dump("");
//      mm.printQTList();
//    }
//    catch (Exception e)
//    {
//      System.out.println("error\n" + e.getMessage());
//      e.printStackTrace();
//    }
		// try
		// {
		// File file = new File("E://Java-workspace//PPRP//src//testFile//1.txt");
		// FileInputStream fis = new FileInputStream(file);
		// mnc mm = new mnc(fis);
		// //yuyi(mm);
		// //cifa("E://Java-workspace//PPRP//2.txt");
		// run("E://Java-workspace//PPRP//2.txt");
		// }
		// catch (Exception e)
		// {
		// e.printStackTrace();
		// }
	}

	public static void run(String FilePath) throws FileNotFoundException {
		try {
			// 词法部分
			File file = new File(FilePath);
			SimpleCharStream scs = new SimpleCharStream(new FileInputStream(file));
			// 输出流
			FileOutputStream fos1 = new FileOutputStream(cifaFile); // 词法
			FileOutputStream fos2 = new FileOutputStream(yufaFile); // 语法
			FileOutputStream fos3 = new FileOutputStream(yuyiFile); // 语义
			PrintStream LexicalStream1 = new PrintStream(fos1);
			PrintStream LexicalStream2 = new PrintStream(fos2);
			PrintStream LexicalStream3 = new PrintStream(fos3);
			// 词法部分，得到lexicalStr
			mncTokenManager mtm = new mncTokenManager(scs);
			Token a = mtm.getNextToken();
			String lexicalStr = "";
			while (a.kind != EOF) {
				lexicalStr += a.kind;
				lexicalStr += "\u005ct";
				lexicalStr += a.image;
				lexicalStr += "\u005cn";
				System.out.println(a.kind + "\u005ct" + a.image);
				a = mtm.getNextToken();
			}
			// 将流传送到文件
			LexicalStream1.print(lexicalStr);
			// 关闭流
			// fos1.close();
			// LexicalStream1.close();
			// 语法分析，得到syntaxStr
			mnc tmp = new mnc(new FileInputStream(new File(FilePath)));
			SimpleNode n = tmp.Start();
			System.setOut(LexicalStream2);
			n.dump("");
			// 关闭所有的流
			// fos2.close();
			// LexicalStream2.close();
			// 语义分析
			System.setOut(LexicalStream3);
			tmp.printQTList();
			fos1.close();
			LexicalStream1.close();
			fos2.close();
			LexicalStream2.close();
			fos3.close();
			LexicalStream3.close();
		} catch (Exception e) {
			e.printStackTrace();
		}
	}

	public static void yuyi(mnc mm) throws FileNotFoundException {
		try {
			SimpleNode n = mm.Start();
			FileOutputStream fos = new FileOutputStream(yuyiFile);
			PrintStream ps = new PrintStream(fos);
			System.setOut(ps);
			dumps("", n, ps);
			fos.close();
			ps.close();
		} catch (Exception e) {
			System.out.println("error\u005cn" + e.getMessage());
			e.printStackTrace();
		}
	}

	public static void dumps(String prefix, SimpleNode sn, PrintStream ps) {
		ps.println(prefix);
		if (sn.children != null) {
			for (int i = 0; i < sn.children.length; ++i) {
				SimpleNode n = (SimpleNode) sn.children[i];
				if (n != null) {
					n.dump(prefix + "  ");
				}
			}
		}
	}

	public static void cifa(String FilePath) throws FileNotFoundException {
		try {
			File file = new File(FilePath);
			SimpleCharStream scs = new SimpleCharStream(new FileInputStream(file));
			FileOutputStream fos = new FileOutputStream(cifaFile);
			PrintStream LexicalStream = new PrintStream(fos);
			mncTokenManager mtm = new mncTokenManager(scs);
			Token a = mtm.getNextToken();
			String lexicalStr = "";
			while (a.kind != EOF) {
				lexicalStr += a.kind;
				lexicalStr += "\u005ct";
				lexicalStr += a.image;
				lexicalStr += "\u005cn";
				System.out.println(a.kind + "\u005ct" + a.image);
				a = mtm.getNextToken();
			}
			LexicalStream.print(lexicalStr);
			fos.close();
			LexicalStream.close();
		} catch (Exception e) {
			System.out.println("Oops.");
			System.out.println(e.getMessage());
		}
	}

	final public SimpleNode Start() throws ParseException {
		/* @bgen(jjtree) Start */
		SimpleNode jjtn000 = new SimpleNode(JJTSTART);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			Program();
			jj_consume_token(0);
			jjtree.closeNodeScope(jjtn000, true);
			jjtc000 = false;
			{
				if (true)
					return jjtn000;
			}
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
		throw new Error("Missing return statement in function");
	}

	final public Token type() throws ParseException {
		/* @bgen(jjtree) type */
		SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		Token t = null;
		try {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case INT:
				t = jj_consume_token(INT);
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false; {
				if (true)
					return t;
			}
				break;
			case FLOAT:
				t = jj_consume_token(FLOAT);
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false; {
				if (true)
					return t;
			}
				break;
			case DOUBLE:
				t = jj_consume_token(DOUBLE);
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false; {
				if (true)
					return t;
			}
				break;
			case CHAR:
				t = jj_consume_token(CHAR);
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false; {
				if (true)
					return t;
			}
				break;
			case VOID:
				t = jj_consume_token(VOID);
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false; {
				if (true)
					return t;
			}
				break;
			default:
				jj_la1[0] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
		throw new Error("Missing return statement in function");
	}

	final public void Program() throws ParseException {
		/* @bgen(jjtree) Program */
		SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			type();
			jj_consume_token(MAIN);
			jj_consume_token(LB);
			label_1: while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case INT:
				case CHAR:
				case DOUBLE:
				case FLOAT:
				case VOID:
					;
					break;
				default:
					jj_la1[1] = jj_gen;
					break label_1;
				}
				type();
				Identifier();
			}
			jj_consume_token(RB);
			StateBlock();
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	final public void StateBlock() throws ParseException {
		/* @bgen(jjtree) StateBlock */
		SimpleNode jjtn000 = new SimpleNode(JJTSTATEBLOCK);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case IF:
			case INT:
			case CHAR:
			case DOUBLE:
			case FLOAT:
			case VOID:
			case WHILE:
			case BREAK:
			case SWITCH:
			case DO:
			case FOR:
			case IDENTIFIER:
				State();
				break;
			case LCB:
				jj_consume_token(LCB);
				label_2: while (true) {
					switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case IF:
					case INT:
					case CHAR:
					case DOUBLE:
					case FLOAT:
					case VOID:
					case WHILE:
					case BREAK:
					case SWITCH:
					case DO:
					case FOR:
					case IDENTIFIER:
					case LCB:
						;
						break;
					default:
						jj_la1[2] = jj_gen;
						break label_2;
					}
					StateBlock();
				}
				jj_consume_token(RCB);
				break;
			default:
				jj_la1[3] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	final public void State() throws ParseException {
		/* @bgen(jjtree) State */
		SimpleNode jjtn000 = new SimpleNode(JJTSTATE);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case INT:
			case CHAR:
			case DOUBLE:
			case FLOAT:
			case VOID:
			case BREAK:
			case IDENTIFIER:
				SeqState();
				break;
			case IF:
			case SWITCH:
				BranchState();
				break;
			case WHILE:
			case DO:
			case FOR:
				LoopState();
				break;
			default:
				jj_la1[4] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	final public void SeqState() throws ParseException {
		/* @bgen(jjtree) SeqState */
		SimpleNode jjtn000 = new SimpleNode(JJTSEQSTATE);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		try {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case INT:
			case CHAR:
			case DOUBLE:
			case FLOAT:
			case VOID:
				DecState();
				break;
			case IDENTIFIER:
				AssState();
				break;
			case BREAK:
				BreakState();
				break;
			default:
				jj_la1[5] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			jj_consume_token(SEMI);
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}

	final public void DecState() throws ParseException {
		/* @bgen(jjtree) DecState */
		SimpleNode jjtn000 = new SimpleNode(JJTDECSTATE);
		boolean jjtc000 = true;
		jjtree.openNodeScope(jjtn000);
		Token t = null;
		Token node = null;
		// 检查是否重复定义
		String name = null;
		// 临时变量
		String tps = null;
		Record tempNode = null;
		try {
			t = type();
			node = jj_consume_token(IDENTIFIER);
			name = node.image;
			if (RecordList.getSize() != 0 && RecordList.ifExist(name)) {
				tps = "\u53d8\u91cf" + name + "\u4e4b\u524d\u5df2\u7ecf\u58f0\u660e\u8fc7" + "\u005cn";
				S += tps;
				tps = null;
				haveError = true;
			} else {
				tempNode = new Record(name, t.image);
				RecordList.addNode(tempNode);
			}
			label_3: while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case COMMA:
					;
					break;
				default:
					jj_la1[6] = jj_gen;
					break label_3;
				}
				jj_consume_token(COMMA);
				jj_consume_token(IDENTIFIER);
			}
		} catch (Throwable jjte000) {
			if (jjtc000) {
				jjtree.clearNodeScope(jjtn000);
				jjtc000 = false;
			} else {
				jjtree.popNode();
			}
			if (jjte000 instanceof RuntimeException) {
				{
					if (true)
						throw (RuntimeException) jjte000;
				}
			}
			if (jjte000 instanceof ParseException) {
				{
					if (true)
						throw (ParseException) jjte000;
				}
			}
			{
				if (true)
					throw (Error) jjte000;
			}
		} finally {
			if (jjtc000) {
				jjtree.closeNodeScope(jjtn000, true);
			}
		}
	}
